# TP-Game0

./: .gitignore  README.md  graphics_testing.cpp  idea.txt  patterns.txt
.github/workflow/: for_push.yml
.github/workflows/: test.yml
Game pictures/Landscape/Grass/: Grass1.xcf
Game pictures/Units/: clubber.xcf
game/: .Unit.h.swp  Application.cpp  CMakeLists.txt  Structure.cpp  Structure.h  Unit.cpp  Unit.h  build  declaration.h  game_field.cpp  game_field.h  graphics.cpp  graphics.h  main.cpp  player.h  run.sh  simplegame
game/base/: CMakeCache.txt  Makefile  cmake_install.cmake  game  install_manifest.txt
game/base/src/: Makefile  cmake_install.cmake
game/cmake/: FindCairo.cmake  FindGTK3_GTK.cmake
game/include/: Archer.h  Catapult.h  Cavalery.h  Cursor.h  CursorImages.h  HorseArcher.h  Player.h  PlayerEnum.h  Rivers.h  Structure.h  StructureImages.h  StructureTreasury.h  Treasury.h  Unit.h  UnitImages.h  UnitTreasury.h  declaration.h  game_field.h  graphics.h
game/libraries/: CMakeLists.txt  game_field.cpp
game/libraries/SU/: Structure.cpp  Unit.cpp
game/src/: Archer.cpp  BasicUnits.cpp  CMakeLists.txt  Catapult.cpp  Cavalery.cpp  Cursor.cpp  HorseArcher.cpp  Player.cpp  PlayerEnum.cpp  Rivers.cpp  Structure.cpp  StructureTreasury.cpp  Treasury.cpp  Unit.cpp  UnitTreasury.cpp  game_field.cpp  graphics.cpp
test_commands/: 1
